Update blog configuration and content
- Changed blog title to "Victor's Blog" and updated email address in `_config.yml`.
- Translated "About Me" section to Korean and updated personal information in `about.md`.
- Revised homepage content in `index.md` to reflect new focus and language.
- Removed outdated posts and added a new post on Cilium, including setup instructions and comparisons with Flannel.
- Added various configuration and setup scripts for Kubernetes and Cilium in the `assets/cilium` directory.
- Introduced new images for Cilium architecture and Kubernetes node information.

This commit enhances the blog's content and structure, aligning it with the author's current focus on DevOps and Kubernetes.

--- a/_config.yml
+++ b/_config.yml
@@ -9,16 +9,13 @@
 # 'bundle exec jekyll serve'. If you change this file, please restart the server.
 
 # Site settings
-title: Victor Zo Blog
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Welcome to my personal blog where I share thoughts on technology, 
-  development, and life experiences.
+title: Victor's Blog
+email: joasjn45@gmail.com
+description: >-
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://victor-zo-blog.io" # the base hostname & protocol for your site
+url: "https://victor-jo.github.io/blog.io"
 
-twitter_username: victorzo
-github_username: victorzo
+github_username: victor-jo
 
 # Build settings
 markdown: kramdown
