--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 title: Victor's Blog
 email: joasjn45@gmail.com
 description: >-
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/blog.io" # the subpath of your site, e.g. /blog
 url: "https://victor-jo.github.io"
 
 github_username: victor-jo
