--- a/assets/cilium/Vagrantfile
+++ b/assets/cilium/Vagrantfile
@@ -1,6 +1,7 @@
 # Variables
 K8SV = '1.33.2-1.1' # Kubernetes Version : apt list -a kubelet , ex) 1.32.5-1.1
 CONTAINERDV = '1.7.27-1' # Containerd Version : apt list -a containerd.io , ex) 1.6.33-1
+CILIUMV = '1.17.6' # Cilium Version : https://github.com/cilium/cilium/releases
 N = 2 # max number of worker nodes
 
 # Base Image  https://portal.cloud.hashicorp.com/vagrant/discover/bento/ubuntu-24.04
@@ -26,7 +27,7 @@ Vagrant.configure("2") do |config|
       subconfig.vm.network "forwarded_port", guest: 22, host: 60000, auto_correct: true, id: "ssh"
       subconfig.vm.synced_folder "./", "/vagrant", disabled: false
       subconfig.vm.provision "shell", path: "init_cfg.sh", args: [ K8SV, CONTAINERDV]
-      subconfig.vm.provision "shell", path: "k8s-ctr.sh", args: [ N ]
+      subconfig.vm.provision "shell", path: "k8s-ctr.sh", args: [ N, CILIUMV ]
     end
 
 #-Worker Nodes Subnet1
