Update README and add Cilium observability guide
- Removed deployment and theme sections from README for clarity.
- Updated GitHub username in contact information.
- Added a new post on Cilium observability, detailing setup and monitoring with Hubble, Prometheus, and Grafana.
- Enhanced installation scripts for Cilium, including dynamic configuration for Kubernetes nodes and improved error handling.

--- a/assets/cilium/kubeadm-join-config.yaml
+++ b/assets/cilium/kubeadm-join-config.yaml
@@ -13,8 +13,8 @@ nodeRegistration:
   imagePullSerial: true
   kubeletExtraArgs:
   - name: node-ip
-    value: 192.168.10.101
-  name: k8s-w1
+    value: NODE_IP_PLACEHOLDER
+  name: NODE_NAME_PLACEHOLDER
   taints: null
 timeouts:
   controlPlaneComponentHealthCheck: 4m0s
